# Godot-Pennylane

./: LICENSE  README.md
godot/: hello.gdextension  hello.gdextension.uid  icon.svg.import  project.godot
godot-pennylane-rust/: Cargo.toml
godot-pennylane-rust/src/: QuantumCircuit.rs  circuit.rs  lib.rs
godot-quantum-rust/: Cargo.toml
godot-quantum-rust/.env/Scripts/: activate  activate.bat
godot-quantum-rust/src/: MoaraSimulator.rs  PyWasmInterpreter.rs  QasmExporter.rs  QuantumCircuit.rs  SpinozaSimulator.rs  lib.rs  q1tsimSimulator.rs
godot-quantum-rust/wasm/lib/python3.13/: _sysconfigdata__wasi_wasm32-wasi.py
godot/locale/: en.po  fr.mo  fr.po  translations.pot
godot/quantum_objects/: bloch_sphere.gd  bloch_sphere.gdshader.uid  bloch_sphere.tscn
godot/scenes/: QuantumCircuit.gd  QuantumCircuit.gd.uid  axes.gd  axes.gd.uid  code_edit.gd  code_edit.gd.uid  main_scene.tscn  python_runner.gd  python_runner.tscn  sprite_2d.gd  sprite_2d.tscn
godot/scenes/UI/: draggable_container.gd  draggable_container.gd.uid  esc_menu.gd  esc_menu.gd.uid  esc_menu.tscn  orderable_sliders.gd  orderable_sliders.gd.uid  orderable_sliders.tscn
godot/scenes/bloch_scenes/: camera_3d.gd  camera_3d.gd.uid  menu.gd  menu.gd.uid
godot/scenes/bloch_scenes/quantum_objects/: angle_viz.gdshader  angle_viz.gdshader.uid  angle_viz_mini.gdshader  angle_viz_mini.gdshader.uid  bloch_sphere.gd  bloch_sphere.gd.uid  bloch_sphere.gdshader  bloch_sphere.tscn  bloch_sphere.tscn27225324790.tmp
