[package]
name = "godot_quantum_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "godot_quantum_rust"
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
spinoza = { git = "https://github.com/QuState/spinoza.git", branch = "main" }
#moara = { git = "https://github.com/sorin-bolos/moara", branch = "master" }
qasmsim = { git = "https://github.com/delapuente/qasmsim", branch = "main" }
q1tsim = { git = "https://github.com/Q1tBV/q1tsim", branch = "master" }
openqasm = { git = "https://github.com/tuomas56/openqasm-rs", branch = "main"}
wasmtime = "29.0.1"
wasmtime-wasi = "29.0.1"
tokio = { version = "1.43.0", features = ["full"] }

# fix vulnerabilities in the dependencies above.
[patch.crates-io]
thread_local = {git = "https://github.com/Amanieu/thread_local-rs", branch = "master"}
regex = { git = "https://github.com/rust-lang/regex", branch = "master"}
prettytable-rs = { git = "https://github.com/phsym/prettytable-rs", branch = "master"}
atty = { git = "https://github.com/Plecra/atty", branch = "patch-1"}
